bin/testsuite/tests/compiler/src/errors/compiler5517.swg
#global testerror "Err0440"

#test
{
    foreach #os in "tto" {}
}